# super-hubo

./: LICENSE  README.md  pyproject.toml
eval/: Super_Hubo_Eval.ipynb  Super_Hubo_Problem_Eval.ipynb
super_hubo/: __init__.py  utils.py
super_hubo/problem/: edgeCover.py  hyperMaxCut.py  minimumSetCover.py
super_hubo/solver/: bruteforce_solver.py  kipu_solver.py  solver.py
